// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box should render 1`] = `
<div
  className="Box"
  style={Object {}}
>
  <div />
</div>
`;

exports[`Box should render with attributes 1`] = `
<div
  className="Box"
  style={
    Object {
      "backgroundColor": "var(--background)",
    }
  }
>
  <div />
</div>
`;
